[gd_scene load_steps=4 format=3 uid="uid://hydamn8p3v03"]

[ext_resource type="Script" path="res://Scenes/MainMenu/main_menu.gd" id="1_u5eok"]
[ext_resource type="Texture2D" uid="uid://bdg6mdyimtlb1" path="res://Art/UI/Bikes of the round title screen.png" id="2_eqp5y"]
[ext_resource type="Script" path="res://Scenes/MainMenu/HiScores.gd" id="3_l6x7r"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u5eok")
metadata/_edit_vertical_guides_ = [574.0]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(576, 324)
texture = ExtResource("2_eqp5y")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 14.0
offset_top = -37.5
offset_right = 165.0
offset_bottom = 37.5
grow_vertical = 2
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
text = "Start"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../StartButton")
text = "Quit"

[node name="HiScores" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -347.0
offset_top = 200.0
offset_right = -251.0
offset_bottom = 269.0
grow_horizontal = 2
scale = Vector2(2.22785, 2.22785)
text = "hiscores"
script = ExtResource("3_l6x7r")

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
